[tool.poetry]
name = "Automation Module for CrowdStrike Falcon"
description = ""
version = "0.1"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sekoia-automation-sdk = "^1.13.0"
crowdstrike-falconpy = "^1.1.4"
requests-ratelimiter = "^0.4.0"
stix2-patterns = "^2.0.0"
structlog = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
requests = "*"
requests-mock = "*"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]
