[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Sekoia.io Automation Module for Duo"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.black]
line-length = 119
target-version = ["py314"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 119

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
orjson = "^3.7.7"
sekoia-automation-sdk = "^1.13.0"
duo-client = "^5.0.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
isort = "*"
black = "*"
mypy = "*"

[tool.coverage.run]
omit = ["tests/*", "main.py", "dev.py"]
