[tool.poetry]
name = "SEKOIA's automation module for Github"
version = "0.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sekoia-automation-sdk = "^1.13.0"
requests-mock = "^1.10.0"
structlog = "^23.1.0"
orjson = "^3.8.12"
requests-ratelimiter = "^0.4.0"
aiohttp = "^3.8.5"
aiolimiter = "^1.1.0"
jwt = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
pytest-xdist = "*"
pytest-env = "*"
pytest-flake8 = "*"
requests = "*"
requests-mock = "*"
aioresponses = "^0.7.4"
Faker = "^13.12.0"
autoflake = "^1.4"
isort = "^5.10.1"
black = { version = "^23.7.0", extras = ["colorama"] }
mypy = "^0.960"
poethepoet = { version = "^0.16.5", extras = ["poetry_plugin"] }
gevent = "^23.9"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = true
exclude = ["tests/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
addopts = '''
  --strict-markers
  --tb=short
  --asyncio-mode=auto
  --cov=github_modules
  --cov-branch
  --cache-clear
  --cov-report=html
  --cov-report=term-missing:skip-covered
  --cov-fail-under=90
  --numprocesses=auto
'''

[tool.coverage.run]
omit = ["tests/*", "main.py", "github_modules/metrics.py"]
concurrency = ["gevent"]

[tool.poe.tasks.lint]
sequence = [
    { cmd = "poetry run autoflake --in-place --remove-all-unused-imports --remove-duplicate-keys --remove-unused-variables */**/*.py" },
    { cmd = "poetry run black ." },
    { cmd = "poetry run isort ." },
    { cmd = "poetry run mypy ." },
]
help = "Make code linting and formatting."
