[tool.poetry]
name = "Google Automation module"
description = ""
version = "0.0"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sekoia-automation-sdk = "^1.13.0"
google-cloud-bigquery = "^3.7.0"
google-cloud-pubsub = "^2.12.0"
google-api-python-client = "^2.125.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.0.0"
google-api-core = "^2.11.1"
google-auth = "^2.22.0"
googleapis-common-protos = "^1.59.1"
httplib2 = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
freezegun = "*"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119

[tool.coverage.run]
omit = [
    "tests/*",
    "main.py",
]
